fix: nav overlapping scroll fix

--- a/src/components/navigation/styles.module.scss
+++ b/src/components/navigation/styles.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   padding: 23px 0px;
-  transition: transform 1.2s ease-in-out;
+  transition: transform 0.75s ease-out;
   background-color: var(--color-white);
   will-change: transform, opacity, background-color;
 }
